--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -164,24 +164,36 @@
     "    visited = defaultdict(bool)\n",
     "    \n",
     "    for index in range(k):\n",
-    "        operator, num = map(int, input().split())\n",
+    "        operator, num = input().split()\n",
     "        num = int(num)\n",
     "\n",
     "        if operator == \"D\":\n",
     "            if num == 1:\n",
-    "                if len() == 0:\n",
-    "                    continue\n",
-    "                heapq.heappop(max_heap)\n",
+    "                while max_heap and not visited[max_heap[0][1]]:\n",
+    "                    heapq.heappop(max_heap)\n",
+    "                if max_heap:\n",
+    "                    visited[max_heap[0][1]]\n",
+    "                    heapq.heappop(max_heap)\n",
     "            else:\n",
-    "                if len() == 0:\n",
-    "                    continue\n",
-    "                heapq.heappop(min_heap)\n",
+    "                while min_heap and not visited[min_heap[0][1]]:\n",
+    "                    heapq.heappop(min_heap)\n",
+    "                if min_heap:\n",
+    "                    visited[min_heap[0][1]]\n",
+    "                    heapq.heappop(min_heap)\n",
     "        elif operator == \"I\":\n",
-    "            heapq.heappush(max_heap, -num)\n",
-    "            heapq.heappush(min_heap, num)\n",
+    "            heapq.heappush(max_heap, (-num, index))\n",
+    "            heapq.heappush(min_heap, (num, index))\n",
     "            visited[index] = True\n",
     "            \n",
-    "\n"
+    "while max_heap and not visited[max_heap[0][1]]:\n",
+    "        heapq.heappop(max_heap)\n",
+    "while min_heap and not visited[min_heap[0][1]]:\n",
+    "    heapq.heappop(min_heap)\n",
+    "\n",
+    "if not max_heap or not min_heap:\n",
+    "        print(\"EMPTY\")\n",
+    "else:\n",
+    "    print(-max_heap[0][0], min_heap[0][0])"
    ]
   },
   {
