--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,213 +66,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1\n",
-      "1 1 1\n",
-      "1 1 1\n"
+      "144\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "from collections import deque\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
     "n = int(input())\n",
-    "rgbs = [list(input().strip()) for _ in range(n)]\n",
     "\n",
-    "area1 = 0\n",
-    "area2 = 0\n",
-    "\n",
-    "dx = [-1, 1, 0, 0]\n",
-    "dy = [0, 0, -1, 1]\n",
-    "\n",
-    "def bfs(i, j, color, visited):\n",
-    "    have_to_visit = deque()\n",
-    "    have_to_visit.append((i, j))\n",
-    "    visited[i][j] = True\n",
-    "    \n",
-    "    while have_to_visit:\n",
-    "        x, y = have_to_visit.popleft()\n",
-    "        \n",
-    "        for i in range(4):\n",
-    "            nx = x + dx[i]\n",
-    "            ny = y + dy[i]\n",
-    "            \n",
-    "            if 0 <= nx < n and 0 <= ny < n:\n",
-    "                if rgbs[nx][ny] in color and not visited[nx][ny]:\n",
-    "                    visited[nx][ny] = True\n",
-    "                    have_to_visit.append((nx, ny))\n",
-    "\n",
-    "for color in ['R', 'G', 'B']:\n",
-    "    visited = [[False]*n for _ in range(n)]\n",
-    "    have_to_visit = deque()\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if rgbs[i][j] in color and not visited[i][j]:\n",
-    "                bfs(i, j, color, visited)\n",
-    "                area1 += 1\n",
-    "\n",
-    "for color in [['R', 'G'], 'B']:\n",
-    "    visited = [[False]*n for _ in range(n)]\n",
-    "    have_to_visit = deque()\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if rgbs[i][j] in color and not visited[i][j]:\n",
-    "                bfs(i, j, color, visited)\n",
-    "                area2 += 1\n",
-    "\n",
-    "print(area1, area2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "import heapq\n",
-    "from collections import deque, defaultdict\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "t = int(input())\n",
-    "\n",
-    "for i in range(t):\n",
-    "    k = int(input())\n",
-    "    \n",
-    "    max_heap = []\n",
-    "    min_heap = []\n",
-    "    visited = defaultdict(bool)\n",
-    "    \n",
-    "    for index in range(k):\n",
-    "        operator, num = input().split()\n",
-    "        num = int(num)\n",
-    "\n",
-    "        if operator == \"D\":\n",
-    "            if num == 1:\n",
-    "                while max_heap and not visited[max_heap[0][1]]:\n",
-    "                    heapq.heappop(max_heap)\n",
-    "                if max_heap:\n",
-    "                    visited[max_heap[0][1]]\n",
-    "                    heapq.heappop(max_heap)\n",
-    "            else:\n",
-    "                while min_heap and not visited[min_heap[0][1]]:\n",
-    "                    heapq.heappop(min_heap)\n",
-    "                if min_heap:\n",
-    "                    visited[min_heap[0][1]]\n",
-    "                    heapq.heappop(min_heap)\n",
-    "        elif operator == \"I\":\n",
-    "            heapq.heappush(max_heap, (-num, index))\n",
-    "            heapq.heappush(min_heap, (num, index))\n",
-    "            visited[index] = True\n",
-    "            \n",
-    "while max_heap and not visited[max_heap[0][1]]:\n",
-    "        heapq.heappop(max_heap)\n",
-    "while min_heap and not visited[min_heap[0][1]]:\n",
-    "    heapq.heappop(min_heap)\n",
-    "\n",
-    "if not max_heap or not min_heap:\n",
-    "        print(\"EMPTY\")\n",
+    "result = 0\n",
+    "if n < 100:\n",
+    "    result = n\n",
     "else:\n",
-    "    print(-max_heap[0][0], min_heap[0][0])"
+    "    result = 99\n",
+    "    for i in range(100, n + 1):\n",
+    "        i = str(i)\n",
+    "        \n",
+    "        num1 = int(i[0])\n",
+    "        num2 = int(i[1])\n",
+    "        num3 = int(i[2])\n",
+    "        \n",
+    "        diff1 = num1 - num2\n",
+    "        diff2 = num2 - num3\n",
+    "        \n",
+    "        if diff1 == diff2:\n",
+    "            result += 1\n",
+    "\n",
+    "print(result)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "import heapq\n",
-    "\n",
-    "heap = []\n",
-    "values = [1,5,3,2,4]\n",
-    "\n",
-    "# 아래 for문을 실행시키고 나면 heap은 [-5,-4,-3,-1,-2]가 된다.\n",
-    "for value in values:\n",
-    "\theapq.heappush(heap, -value)\n",
-    "\n",
-    "# 아래 for문을 실행시키면 5,4,3,2,1이 출력된다. 즉, 큰 숫자부터 출력이 된다.\n",
-    "for i in range(5):\n",
-    "\tprint(-heapq.heappop(heap))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def dfs_path_exist(adj_matrix):\n",
-    "    n = len(adj_matrix)\n",
-    "    reach = [[0] * n for _ in range(n)]\n",
-    "\n",
-    "    def dfs(start, node, visited):\n",
-    "        for neighbor in range(n):\n",
-    "            if adj_matrix[node][neighbor] and not visited[neighbor]:\n",
-    "                visited[neighbor] = True\n",
-    "                reach[start][neighbor] = 1\n",
-    "                dfs(start, neighbor, visited)\n",
-    "\n",
-    "    for i in range(n):\n",
-    "        visited = [False] * n\n",
-    "        dfs(i, i, visited)\n",
-    "\n",
-    "    return reach\n",
-    "\n",
-    "# 예제\n",
-    "adj_matrix = [\n",
-    "    [0, 1, 0, 0],\n",
-    "    [0, 0, 1, 0],\n",
-    "    [0, 0, 0, 1],\n",
-    "    [0, 0, 0, 0]\n",
-    "]\n",
-    "\n",
-    "result = dfs_path_exist(adj_matrix)\n",
-    "for row in result:\n",
-    "    print(*row)\n"
+    "pow(10, 0)"
    ]
   },
   {
