--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,60 +66,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "144\n"
+      "1 1 1 1 1\n"
      ]
     }
    ],
    "source": [
     "n = int(input())\n",
     "\n",
-    "result = 0\n",
-    "if n < 100:\n",
-    "    result = n\n",
-    "else:\n",
-    "    result = 99\n",
-    "    for i in range(100, n + 1):\n",
-    "        i = str(i)\n",
-    "        \n",
-    "        num1 = int(i[0])\n",
-    "        num2 = int(i[1])\n",
-    "        num3 = int(i[2])\n",
-    "        \n",
-    "        diff1 = num1 - num2\n",
-    "        diff2 = num2 - num3\n",
-    "        \n",
-    "        if diff1 == diff2:\n",
-    "            result += 1\n",
+    "mans = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "print(result)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pow(10, 0)"
+    "def is_smaller(a, b):\n",
+    "    return a[0] < b[0] and a[1] < b[1]\n",
+    "\n",
+    "length = len(mans)\n",
+    "scores = []\n",
+    "\n",
+    "for man in mans:\n",
+    "    score = 1\n",
+    "    for i in range(length):\n",
+    "        if mans[i] == man:\n",
+    "            continue\n",
+    "        \n",
+    "        std = is_smaller(man, mans[i])\n",
+    "        if std:\n",
+    "            score += 1\n",
+    "            \n",
+    "    scores.append(score)\n",
+    "    \n",
+    "print(*scores)"
    ]
   },
   {
@@ -127,7 +108,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N, M = 3, 2\n",
+    "\n",
+    "visited = [False] * (N + 1)\n",
+    "sequence = []\n",
+    "\n",
+    "def backtrack():\n",
+    "    if len(sequence) == M:\n",
+    "        print(*sequence)\n",
+    "        return\n",
+    "\n",
+    "    for i in range(1, N + 1):\n",
+    "        if not visited[i]:\n",
+    "            visited[i] = True\n",
+    "            sequence.append(i)\n",
+    "            backtrack()\n",
+    "            sequence.pop()\n",
+    "            visited[i] = False\n",
+    "\n",
+    "backtrack()\n"
+   ]
   }
  ],
  "metadata": {
