--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -105,13 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "2 2\n",
+      "2 3\n",
+      "3 3\n"
+     ]
+    }
+   ],
    "source": [
-    "N, M = 3, 2\n",
+    "N, M = map(int, input().split())\n",
     "\n",
-    "visited = [False] * (N + 1)\n",
     "sequence = []\n",
     "\n",
     "def backtrack():\n",
@@ -120,15 +132,24 @@
     "        return\n",
     "\n",
     "    for i in range(1, N + 1):\n",
-    "        if not visited[i]:\n",
-    "            visited[i] = True\n",
+    "        if len(sequence) == 0:\n",
     "            sequence.append(i)\n",
-    "            backtrack()\n",
-    "            sequence.pop()\n",
-    "            visited[i] = False\n",
+    "        elif i < sequence[-1]:\n",
+    "            continue\n",
+    "        else:\n",
+    "            sequence.append(i)\n",
+    "        backtrack()\n",
+    "        sequence.pop()\n",
     "\n",
     "backtrack()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
