--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,82 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1 1 1\n"
+      "1\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
     "n = int(input())\n",
     "\n",
-    "mans = [list(map(int, input().split())) for _ in range(n)]\n",
+    "arr = list(map(int, input().split()))\n",
     "\n",
-    "def is_smaller(a, b):\n",
-    "    return a[0] < b[0] and a[1] < b[1]\n",
+    "current_sum = 0\n",
+    "best = 0\n",
     "\n",
-    "length = len(mans)\n",
-    "scores = []\n",
-    "\n",
-    "for man in mans:\n",
-    "    score = 1\n",
-    "    for i in range(length):\n",
-    "        if mans[i] == man:\n",
-    "            continue\n",
-    "        \n",
-    "        std = is_smaller(man, mans[i])\n",
-    "        if std:\n",
-    "            score += 1\n",
-    "            \n",
-    "    scores.append(score)\n",
+    "for i in range(1, n):\n",
+    "    current_sum = max(current_sum + arr[i], arr[i])\n",
+    "    best = max(current_sum, best)\n",
     "    \n",
-    "print(*scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1\n",
-      "1 2\n",
-      "1 3\n",
-      "2 2\n",
-      "2 3\n",
-      "3 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "N, M = map(int, input().split())\n",
-    "\n",
-    "sequence = []\n",
-    "\n",
-    "def backtrack():\n",
-    "    if len(sequence) == M:\n",
-    "        print(*sequence)\n",
-    "        return\n",
-    "\n",
-    "    for i in range(1, N + 1):\n",
-    "        if len(sequence) == 0:\n",
-    "            sequence.append(i)\n",
-    "        elif i < sequence[-1]:\n",
-    "            continue\n",
-    "        else:\n",
-    "            sequence.append(i)\n",
-    "        backtrack()\n",
-    "        sequence.pop()\n",
-    "\n",
-    "backtrack()\n"
+    "print(max(best))"
    ]
   },
   {
