--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -108,16 +108,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "requests = list(map(int, input().split()))\n",
+    "budget = int(input())\n",
+    "\n",
+    "city_budget = 0\n",
+    "\n",
+    "start = 0\n",
+    "end = max(requests)\n",
+    "\n",
+    "if sum(requests) < budget:\n",
+    "    city_budget = end\n",
+    "else:\n",
+    "    while start != end:\n",
+    "        mid = (start + end) // 2\n",
+    "        \n",
+    "        total = 0\n",
+    "        for i in range(n):\n",
+    "            total += min(mid, requests[i])\n",
+    "        \n",
+    "        if budget >= total:\n",
+    "            city_budget = mid\n",
+    "            start = mid + 1\n",
+    "        else:\n",
+    "            end = mid - 1\n",
+    "            \n",
+    "print(city_budget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "75"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
