--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127\n"
+      "3\n"
      ]
     }
    ],
@@ -124,48 +124,87 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n = int(input())\n",
-    "requests = list(map(int, input().split()))\n",
-    "budget = int(input())\n",
+    "n, c = map(int, input().split())\n",
     "\n",
-    "city_budget = 0\n",
+    "houses = [int(input()) for _ in range(n)]\n",
+    "houses.sort()\n",
     "\n",
-    "start = 0\n",
-    "end = max(requests)\n",
+    "result = 0\n",
+    "left = 1\n",
+    "right = houses[-1] - houses[0]\n",
     "\n",
-    "if sum(requests) < budget:\n",
-    "    city_budget = end\n",
-    "else:\n",
-    "    while start != end:\n",
-    "        mid = (start + end) // 2\n",
-    "        \n",
-    "        total = 0\n",
-    "        for i in range(n):\n",
-    "            total += min(mid, requests[i])\n",
-    "        \n",
-    "        if budget >= total:\n",
-    "            city_budget = mid\n",
-    "            start = mid + 1\n",
-    "        else:\n",
-    "            end = mid - 1\n",
-    "            \n",
-    "print(city_budget)"
+    "def get_interval(houses, mid, c):\n",
+    "    count = 1\n",
+    "    installed = houses[0]\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        if houses[i] - installed >= mid:\n",
+    "            count += 1\n",
+    "            installed = houses[i]\n",
+    "        if count >= c:\n",
+    "            return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "while left <= right:\n",
+    "    mid = (right + left) // 2\n",
+    "    \n",
+    "    interval = get_interval(houses, mid, c)\n",
+    "    \n",
+    "    if interval:\n",
+    "        result = mid\n",
+    "        left = mid + 1\n",
+    "    else:\n",
+    "        right = mid - 1\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75"
+       "[0, 1, 1, 0, 1, 0, 0, 0, 1, 1]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n, c = 5, 3\n",
+    "\n",
+    "houses = [1, 2, 8, 4, 9]\n",
+    "houses = sorted(houses)\n",
+    "\n",
+    "result = 0\n",
+    "left = houses[0]\n",
+    "right = houses[-1]\n",
+    "\n",
+    "dp = [0] * (right+1)\n",
+    "for h in houses:\n",
+    "    dp[h] = 1\n",
+    "    \n",
+    "dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
     }
    ],
    "source": []
