--- a/코딩 테스트/알고리즘.ipynb
+++ b/코딩 테스트/알고리즘.ipynb
@@ -117,7 +117,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#merge sort\n"
+    "#merge sort\n",
+    "def merge(arr, left, mid, right):\n",
+    "    temp = []\n",
+    "    i = left       # left subarray 시작\n",
+    "    j = mid + 1    # right subarray 시작\n",
+    "\n",
+    "    # 두 부분을 비교하며 정렬\n",
+    "    while i <= mid and j <= right:\n",
+    "        if arr[i] <= arr[j]:\n",
+    "            temp.append(arr[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            temp.append(arr[j])\n",
+    "            j += 1\n",
+    "\n",
+    "    # 남은 부분 복사\n",
+    "    while i <= mid:\n",
+    "        temp.append(arr[i])\n",
+    "        i += 1\n",
+    "    while j <= right:\n",
+    "        temp.append(arr[j])\n",
+    "        j += 1\n",
+    "\n",
+    "    # 정렬된 결과를 원래 배열에 반영\n",
+    "    for idx in range(len(temp)):\n",
+    "        arr[left + idx] = temp[idx]\n",
+    "\n",
+    "\n",
+    "def merge_sort(arr, left, right):\n",
+    "    if left < right:\n",
+    "        mid = (left + right) // 2\n",
+    "        merge_sort(arr, left, mid)\n",
+    "        merge_sort(arr, mid + 1, right)\n",
+    "        merge(arr, left, mid, right)\n",
+    "\n",
+    "\n",
+    "a = [4,7,2,9,1,6,5]\n",
+    "left = 0\n",
+    "right = len(a) - 1\n",
+    "merge_sort(a, left, right)\n",
+    "print(a)"
    ]
   },
   {
