--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -108,106 +108,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
+    "n = int(input())\n",
     "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "n, c = map(int, input().split())\n",
-    "\n",
-    "houses = [int(input()) for _ in range(n)]\n",
-    "houses.sort()\n",
-    "\n",
-    "result = 0\n",
-    "left = 1\n",
-    "right = houses[-1] - houses[0]\n",
-    "\n",
-    "def get_interval(houses, mid, c):\n",
-    "    count = 1\n",
-    "    installed = houses[0]\n",
+    "def recursive(n, str):\n",
+    "    n = n // 3\n",
     "    \n",
-    "    for i in range(1, n):\n",
-    "        if houses[i] - installed >= mid:\n",
-    "            count += 1\n",
-    "            installed = houses[i]\n",
-    "        if count >= c:\n",
-    "            return True\n",
+    "    for i in range(n):\n",
+    "        if i % 3 == 0:\n",
+    "            print()\n",
+    "        if n // 2 == i:\n",
+    "            recursive(n, \" \")\n",
+    "        else:\n",
+    "            recursive(n, str)\n",
+    "            \n",
     "\n",
-    "    return False\n",
+    "recursive(n, \"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "***\n",
+      "* *\n",
+      "***"
+     ]
+    }
+   ],
+   "source": [
+    "n = 9\n",
     "\n",
-    "while left <= right:\n",
-    "    mid = (right + left) // 2\n",
-    "    \n",
-    "    interval = get_interval(houses, mid, c)\n",
-    "    \n",
-    "    if interval:\n",
-    "        result = mid\n",
-    "        left = mid + 1\n",
+    "pattern = [\n",
+    "    \"***\",\n",
+    "    \"* *\",\n",
+    "    \"***\"\n",
+    "]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    if i % 3 == 0:\n",
+    "        print()\n",
+    "    if n // 2 == i:\n",
+    "        print(\" \", end=\"\")\n",
     "    else:\n",
-    "        right = mid - 1\n",
-    "\n",
-    "print(result)"
+    "        print(\"*\", end=\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 1, 0, 1, 0, 0, 0, 1, 1]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n, c = 5, 3\n",
-    "\n",
-    "houses = [1, 2, 8, 4, 9]\n",
-    "houses = sorted(houses)\n",
-    "\n",
-    "result = 0\n",
-    "left = houses[0]\n",
-    "right = houses[-1]\n",
-    "\n",
-    "dp = [0] * (right+1)\n",
-    "for h in houses:\n",
-    "    dp[h] = 1\n",
-    "    \n",
-    "dp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n"
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***   ***         ***   ***\n",
+      "* *   * *         * *   * *\n",
+      "***   ***         ***   ***\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "grid = [[\"*\" for _ in range(n)] for _ in range(n)]\n",
+    "\n",
+    "def recursive(x, y, n):\n",
+    "    if n == 1:\n",
+    "        return\n",
+    "    \n",
+    "    n = n // 3\n",
+    "    \n",
+    "    for i in range(x + n, x + n * 2):\n",
+    "        for j in range(y + n, y + n * 2):\n",
+    "            grid[i][j] = \" \"\n",
+    "            \n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            if i == 1 and j == 1:\n",
+    "                    continue\n",
+    "            \n",
+    "            recursive(x + i * n, y + j * n, n)\n",
+    "\n",
+    "recursive(0, 0, n)\n",
+    "\n",
+    "for row in grid:\n",
+    "    print(\"\".join(row))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = [[\"*\" for _ in range(n)] for _ in range(n)]\n",
+    "print(*grid[1:2][1:2], sep=(\"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6]\n",
+      "[10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [\n",
+    "    [ 1,  2,  3,  4],\n",
+    "    [ 5,  6,  7,  8],\n",
+    "    [ 9, 10, 11, 12],\n",
+    "    [13, 14, 15, 16]\n",
+    "]\n",
+    "\n",
+    "# 1~2행, 1~2열 슬라이싱 (6,7,10,11)\n",
+    "sliced = [row[1:2] for row in array[1:3]]\n",
+    "\n",
+    "for row in sliced:\n",
+    "    print(row)\n"
+   ]
   },
   {
    "cell_type": "code",
