--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -70,219 +70,107 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mheapq\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline\n\u001b[0;32m----> 6\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      8\u001b[0m distances \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit()))\n\u001b[1;32m      9\u001b[0m prices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit()))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "data": {
+      "text/plain": [
+       "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "n = 4\n",
+    "status = [\n",
+    "    [0, 1, 2, 3],\n",
+    "    [4, 0, 5, 6],\n",
+    "    [7, 1, 0, 2],\n",
+    "    [3, 4, 5, 0]\n",
+    "]\n",
+    "\n",
+    "players = list(range(1, n+1))  # [0, 1, 2, 3]\n",
+    "\n",
+    "combi = list(combinations(players, n // 2))  # [(0,1), (0,2), ..., (2,3)]\n",
+    "\n",
+    "for team in combi[:len(combi) // 2]:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 3\n",
+      "1 3\n",
+      "2 3\n",
+      "1 3\n",
+      "2 3\n",
+      "2 3\n",
+      "1 3\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "import heapq\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n = int(input())\n",
+    "v, e = map(int, input().split())\n",
     "\n",
-    "distances = list(map(int, input().split()))\n",
-    "prices = list(map(int, input().split()))\n",
-    "\n",
-    "low_price = float(\"inf\")\n",
-    "\n",
-    "result = 0\n",
-    "\n",
-    "for i in range(n-1):\n",
-    "    price = prices[i]\n",
+    "graph = [[] for _ in range(v+1)]\n",
+    "for _ in range(e):\n",
+    "    start, end, weight = map(int, input().split())\n",
+    "    graph[start].append((end, weight))\n",
+    "    graph[end].append((start, weight))# 무향 그래프\n",
     "    \n",
-    "    if price < low_price:\n",
-    "        low_price = price\n",
-    "        \n",
-    "    result += low_price * distances[i]\n",
-    "        \n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input())\n",
+    "must_visit1, must_visit2 = map(int, input().split())\n",
     "\n",
-    "def recursive(n, str):\n",
-    "    n = n // 3\n",
+    "def dijkstra(graph, start, num_nodes):\n",
+    "    dist = {node: float('inf') for node in range(1, num_nodes+1)}\n",
+    "    dist[start] = 0\n",
+    "\n",
+    "    pq = [(0, start)]\n",
     "    \n",
-    "    for i in range(n):\n",
-    "        if i % 3 == 0:\n",
-    "            print()\n",
-    "        if n // 2 == i:\n",
-    "            recursive(n, \" \")\n",
-    "        else:\n",
-    "            recursive(n, str)\n",
-    "            \n",
+    "    while pq:\n",
+    "        cur_d, u = heapq.heappop(pq)\n",
+    "        if cur_d > dist[u]:\n",
+    "            continue\n",
+    "        for v, weight in graph[u]:\n",
+    "            new_d = cur_d + weight\n",
+    "            if new_d < dist[v]:\n",
+    "                dist[v] = new_d\n",
+    "                heapq.heappush(pq, (new_d, v))\n",
     "\n",
-    "recursive(n, \"*\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "***\n",
-      "* *\n",
-      "***"
-     ]
-    }
-   ],
-   "source": [
-    "n = 9\n",
+    "    return dist\n",
     "\n",
-    "pattern = [\n",
-    "    \"***\",\n",
-    "    \"* *\",\n",
-    "    \"***\"\n",
-    "]\n",
+    "shortest_paths1 = dijkstra(graph, 1, v)\n",
+    "shortest_paths2 = dijkstra(graph, must_visit1, v)\n",
+    "shortest_paths3 = dijkstra(graph, must_visit2, v)\n",
     "\n",
-    "for i in range(n):\n",
-    "    if i % 3 == 0:\n",
-    "        print()\n",
-    "    if n // 2 == i:\n",
-    "        print(\" \", end=\"\")\n",
-    "    else:\n",
-    "        print(\"*\", end=\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***************************\n",
-      "* ** ** ** ** ** ** ** ** *\n",
-      "***************************\n",
-      "***   ******   ******   ***\n",
-      "* *   * ** *   * ** *   * *\n",
-      "***   ******   ******   ***\n",
-      "***************************\n",
-      "* ** ** ** ** ** ** ** ** *\n",
-      "***************************\n",
-      "*********         *********\n",
-      "* ** ** *         * ** ** *\n",
-      "*********         *********\n",
-      "***   ***         ***   ***\n",
-      "* *   * *         * *   * *\n",
-      "***   ***         ***   ***\n",
-      "*********         *********\n",
-      "* ** ** *         * ** ** *\n",
-      "*********         *********\n",
-      "***************************\n",
-      "* ** ** ** ** ** ** ** ** *\n",
-      "***************************\n",
-      "***   ******   ******   ***\n",
-      "* *   * ** *   * ** *   * *\n",
-      "***   ******   ******   ***\n",
-      "***************************\n",
-      "* ** ** ** ** ** ** ** ** *\n",
-      "***************************\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input())\n",
+    "# 1 → must_visit1 → must_visit2 → v\n",
+    "path1 = shortest_paths1[must_visit1] + shortest_paths2[must_visit2] + shortest_paths3[v]\n",
+    "# 1 → must_visit2 → must_visit1 → v\n",
+    "path2 = shortest_paths1[must_visit2] + shortest_paths3[must_visit1] + shortest_paths2[v]\n",
     "\n",
-    "grid = [[\"*\" for _ in range(n)] for _ in range(n)]\n",
-    "\n",
-    "def recursive(x, y, n):\n",
-    "    if n == 1:\n",
-    "        return\n",
-    "    \n",
-    "    n = n // 3\n",
-    "    \n",
-    "    for i in range(x + n, x + n * 2):\n",
-    "        for j in range(y + n, y + n * 2):\n",
-    "            grid[i][j] = \" \"\n",
-    "            \n",
-    "    for i in range(3):\n",
-    "        for j in range(3):\n",
-    "            if i == 1 and j == 1:\n",
-    "                    continue\n",
-    "            \n",
-    "            recursive(x + i * n, y + j * n, n)\n",
-    "\n",
-    "recursive(0, 0, n)\n",
-    "\n",
-    "for row in grid:\n",
-    "    print(\"\".join(row))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "grid = [[\"*\" for _ in range(n)] for _ in range(n)]\n",
-    "print(*grid[1:2][1:2], sep=(\"\\n\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6]\n",
-      "[10]\n"
-     ]
-    }
-   ],
-   "source": [
-    "array = [\n",
-    "    [ 1,  2,  3,  4],\n",
-    "    [ 5,  6,  7,  8],\n",
-    "    [ 9, 10, 11, 12],\n",
-    "    [13, 14, 15, 16]\n",
-    "]\n",
-    "\n",
-    "# 1~2행, 1~2열 슬라이싱 (6,7,10,11)\n",
-    "sliced = [row[1:2] for row in array[1:3]]\n",
-    "\n",
-    "for row in sliced:\n",
-    "    print(row)\n"
+    "answer = min(path1, path2)\n",
+    "print(answer if answer < float('inf') else -1)"
    ]
   },
   {
