--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,39 +66,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "n = 4\n",
+    "status = [\n",
+    "    [0, 1, 2, 3],\n",
+    "    [4, 0, 5, 6],\n",
+    "    [7, 1, 0, 2],\n",
+    "    [3, 4, 5, 0]\n",
+    "]\n",
+    "\n",
+    "players = list(range(1, n+1))  # [0, 1, 2, 3]\n",
+    "\n",
+    "combi = list(combinations(players, n // 2))  # [(0,1), (0,2), ..., (2,3)]\n",
+    "\n",
+    "for team in combi[:len(combi) // 2]:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 3\n",
+      "1 3\n",
+      "2 3\n",
+      "1 3\n",
+      "2 3\n",
+      "2 3\n",
+      "1 3\n"
+     ]
+    }
+   ],
    "source": [
-    "from collections import deque\n",
+    "import sys\n",
+    "import heapq\n",
     "\n",
-    "a, b = map(int, input().split())\n",
+    "input = sys.stdin.readline\n",
     "\n",
-    "def bfs(start, end):\n",
-    "    have_to_visit = deque()\n",
-    "    count = 0\n",
+    "v, e = map(int, input().split())\n",
+    "\n",
+    "graph = [[] for _ in range(v+1)]\n",
+    "for _ in range(e):\n",
+    "    start, end, weight = map(int, input().split())\n",
+    "    graph[start].append((end, weight))\n",
+    "    graph[end].append((start, weight))# 무향 그래프\n",
     "    \n",
-    "    have_to_visit.append((start, count))\n",
+    "must_visit1, must_visit2 = map(int, input().split())\n",
+    "\n",
+    "def dijkstra(graph, start, num_nodes):\n",
+    "    dist = {node: float('inf') for node in range(1, num_nodes+1)}\n",
+    "    dist[start] = 0\n",
+    "\n",
+    "    pq = [(0, start)]\n",
     "    \n",
-    "    while have_to_visit:\n",
-    "        node, count = have_to_visit.popleft()\n",
-    "        \n",
-    "        if node == end:\n",
-    "            return count\n",
-    "        elif node > end:\n",
+    "    while pq:\n",
+    "        cur_d, u = heapq.heappop(pq)\n",
+    "        if cur_d > dist[u]:\n",
     "            continue\n",
-    "        \n",
-    "        have_to_visit.append((int(str(node) + '1'), count + 1))\n",
-    "        have_to_visit.append((node * 2, count + 1))\n",
-    "        \n",
-    "    return -1\n",
+    "        for v, weight in graph[u]:\n",
+    "            new_d = cur_d + weight\n",
+    "            if new_d < dist[v]:\n",
+    "                dist[v] = new_d\n",
+    "                heapq.heappush(pq, (new_d, v))\n",
     "\n",
-    "result = bfs(a, b)\n",
+    "    return dist\n",
     "\n",
-    "if result == -1:\n",
-    "    print(-1)\n",
-    "else:\n",
-    "    print(result + 1)"
+    "shortest_paths1 = dijkstra(graph, 1, v)\n",
+    "shortest_paths2 = dijkstra(graph, must_visit1, v)\n",
+    "shortest_paths3 = dijkstra(graph, must_visit2, v)\n",
+    "\n",
+    "# 1 → must_visit1 → must_visit2 → v\n",
+    "path1 = shortest_paths1[must_visit1] + shortest_paths2[must_visit2] + shortest_paths3[v]\n",
+    "# 1 → must_visit2 → must_visit1 → v\n",
+    "path2 = shortest_paths1[must_visit2] + shortest_paths3[must_visit1] + shortest_paths2[v]\n",
+    "\n",
+    "answer = min(path1, path2)\n",
+    "print(answer if answer < float('inf') else -1)"
    ]
   },
   {
