--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,9 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
@@ -76,29 +84,30 @@
     "\n",
     "def bfs(start, end):\n",
     "    have_to_visit = deque()\n",
-    "    count = 0\n",
+    "    INF = float(\"inf\")\n",
+    "    visited = [INF] * 100001\n",
     "    \n",
-    "    have_to_visit.append((start, count))\n",
-    "    \n",
+    "    have_to_visit.append(start)\n",
+    "    visited[start] = 0\n",
+    "\n",
     "    while have_to_visit:\n",
-    "        node, count = have_to_visit.popleft()\n",
+    "        start = have_to_visit.popleft()\n",
     "        \n",
-    "        if node == end:\n",
-    "            return count\n",
-    "        elif node > end:\n",
-    "            continue\n",
+    "        if start == end:\n",
+    "            return visited[end]\n",
     "        \n",
-    "        have_to_visit.append((int(str(node) + '1'), count + 1))\n",
-    "        have_to_visit.append((node * 2, count + 1))\n",
-    "        \n",
-    "    return -1\n",
+    "        for node, count in ((start * 2, 0), (start + 1, 1), (start - 1, 1)):\n",
+    "            if 0 <= node <= 100000 and visited[node] > visited[start] + count:\n",
+    "                visited[node] = visited[start] + count\n",
+    "                \n",
+    "                if count == 0:\n",
+    "                    have_to_visit.appendleft(node)\n",
+    "                else:\n",
+    "                    have_to_visit.append(node)\n",
+    "    \n",
     "\n",
     "result = bfs(a, b)\n",
-    "\n",
-    "if result == -1:\n",
-    "    print(-1)\n",
-    "else:\n",
-    "    print(result + 1)"
+    "print(result)\n"
    ]
   },
   {
@@ -106,7 +115,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "a, b = map(int, sys.stdin.readline().split())\n",
+    "\n",
+    "def dijkstra(start, end):\n",
+    "    INF = float('inf')\n",
+    "    visited = [INF] * 100001\n",
+    "    visited[start] = 0\n",
+    "    \n",
+    "    heap = []\n",
+    "    heapq.heappush(heap, (0, start))  # (시간, 위치)\n",
+    "\n",
+    "    while heap:\n",
+    "        time, start = heapq.heappop(heap)\n",
+    "        \n",
+    "        if start == end:\n",
+    "            return time\n",
+    "        \n",
+    "        # 이미 더 빠른 경로로 방문했다면 스킵\n",
+    "        if visited[start] < time:\n",
+    "            continue\n",
+    "\n",
+    "        # 이동할 수 있는 경우\n",
+    "        for next_x, cost in [(start * 2, 0), (start + 1, 1), (start - 1, 1)]:\n",
+    "            if 0 <= next_x <= 100000 and visited[next_x] > time + cost:\n",
+    "                visited[next_x] = time + cost\n",
+    "                heapq.heappush(heap, (time + cost, next_x))\n",
+    "\n",
+    "result = dijkstra(a, b)\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
