--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -78,36 +78,12 @@
     }
    ],
    "source": [
-    "from collections import deque\n",
+    "import sys\n",
+    "import heapq\n",
     "\n",
-    "a, b = map(int, input().split())\n",
-    "\n",
-    "def bfs(start, end):\n",
-    "    have_to_visit = deque()\n",
-    "    INF = float(\"inf\")\n",
-    "    visited = [INF] * 100001\n",
-    "    \n",
-    "    have_to_visit.append(start)\n",
-    "    visited[start] = 0\n",
-    "\n",
-    "    while have_to_visit:\n",
-    "        start = have_to_visit.popleft()\n",
-    "        \n",
-    "        if start == end:\n",
-    "            return visited[end]\n",
-    "        \n",
-    "        for node, count in ((start * 2, 0), (start + 1, 1), (start - 1, 1)):\n",
-    "            if 0 <= node <= 100000 and visited[node] > visited[start] + count:\n",
-    "                visited[node] = visited[start] + count\n",
-    "                \n",
-    "                if count == 0:\n",
-    "                    have_to_visit.appendleft(node)\n",
-    "                else:\n",
-    "                    have_to_visit.append(node)\n",
-    "    \n",
-    "\n",
-    "result = bfs(a, b)\n",
-    "print(result)\n"
+    "INF = float(\"inf\")\n",
+    "input = sys.stdin.readline\n",
+    "\n"
    ]
   },
   {
@@ -115,39 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "import heapq\n",
-    "\n",
-    "a, b = map(int, sys.stdin.readline().split())\n",
-    "\n",
-    "def dijkstra(start, end):\n",
-    "    INF = float('inf')\n",
-    "    visited = [INF] * 100001\n",
-    "    visited[start] = 0\n",
-    "    \n",
-    "    heap = []\n",
-    "    heapq.heappush(heap, (0, start))  # (시간, 위치)\n",
-    "\n",
-    "    while heap:\n",
-    "        time, start = heapq.heappop(heap)\n",
-    "        \n",
-    "        if start == end:\n",
-    "            return time\n",
-    "        \n",
-    "        # 이미 더 빠른 경로로 방문했다면 스킵\n",
-    "        if visited[start] < time:\n",
-    "            continue\n",
-    "\n",
-    "        # 이동할 수 있는 경우\n",
-    "        for next_x, cost in [(start * 2, 0), (start + 1, 1), (start - 1, 1)]:\n",
-    "            if 0 <= next_x <= 100000 and visited[next_x] > time + cost:\n",
-    "                visited[next_x] = time + cost\n",
-    "                heapq.heappush(heap, (time + cost, next_x))\n",
-    "\n",
-    "result = dijkstra(a, b)\n",
-    "print(result)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
