--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,24 +66,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 6\n",
+    "nums = [10,30,10,20,20,10]\n",
+    "dp = [0] * n\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(i):\n",
+    "        if nums[i] > nums[j]:\n",
+    "            dp[i] = max(dp[i], dp[j] + 1)\n",
+    "\n",
+    "print(max(dp))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "113\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "import heapq\n",
     "\n",
-    "INF = float(\"inf\")\n",
     "input = sys.stdin.readline\n",
-    "\n"
+    "\n",
+    "n = int(input())\n",
+    "nums = list(map(int, input().split()))\n",
+    "dp = [0] * n\n",
+    "\n",
+    "for i in range(n):\n",
+    "    dp[i] = nums[i]  # 초기화 : 자기 자신만으로 수열을 만들었을 때 합\n",
+    "\n",
+    "    for j in range(i):\n",
+    "        if nums[i] > nums[j]:\n",
+    "            dp[i] = max(dp[i], dp[j] + nums[i])\n",
+    "\n",
+    "print(max(dp))\n"
    ]
   },
   {
