--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,20 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "n = 6\n",
-    "nums = [10,30,10,20,20,10]\n",
+    "n = 10\n",
+    "nums = [1, 5, 2, 1, 4,3,4,5,2,1]\n",
     "dp = [0] * n\n",
     "\n",
     "for i in range(n):\n",
@@ -92,34 +92,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v, e = 3, 3\n",
+    "\n",
+    "edges = [\n",
+    "    [1, 2, 1],\n",
+    "    [2, 3, 2],\n",
+    "    [1, 3, 3]\n",
+    "]\n",
+    "    \n",
+    "def find(parent, x):\n",
+    "    if parent[x] != x:\n",
+    "        parent[x] = find(parent, parent[x]) #경로 압축\n",
+    "        \n",
+    "    return parent[x]\n",
+    "\n",
+    "\n",
+    "def union(parent, a_root, b_root):\n",
+    "    if a_root < b_root:\n",
+    "        parent[b_root] = a_root\n",
+    "    else:\n",
+    "        parent[a_root] = b_root\n",
+    "    \n",
+    "            \n",
+    "def kruskal(edges, n):\n",
+    "    edges.sort(key = lambda x : x[2])\n",
+    "    parent = [i for i in range(n + 1)]\n",
+    "    \n",
+    "    mst_weight = 0\n",
+    "    # mst_edges = []\n",
+    "    \n",
+    "    for a, b, weight in edges:\n",
+    "        a_root = find(parent, a)\n",
+    "        b_root = find(parent, b)\n",
+    "        if a_root != b_root:\n",
+    "            union(parent, a_root, b_root)\n",
+    "            mst_weight += weight\n",
+    "            # mst_edges.append((a, b, weight))\n",
+    "            \n",
+    "    return mst_weight\n",
+    "\n",
+    "\n",
+    "weight = kruskal(edges, v)\n",
+    "print(weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "113\n"
+      "NO\n",
+      "NO\n",
+      "YES\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
+    "sys.setrecursionlimit(10**6)\n",
     "\n",
-    "input = sys.stdin.readline\n",
+    "n, m = map(int, input().split()) \n",
     "\n",
-    "n = int(input())\n",
-    "nums = list(map(int, input().split()))\n",
-    "dp = [0] * n\n",
+    "cases = [list(map(int, input().split())) for _ in range(m)]\n",
     "\n",
-    "for i in range(n):\n",
-    "    dp[i] = nums[i]  # 초기화 : 자기 자신만으로 수열을 만들었을 때 합\n",
+    "parent = [i for i in range(n+1)]\n",
     "\n",
-    "    for j in range(i):\n",
-    "        if nums[i] > nums[j]:\n",
-    "            dp[i] = max(dp[i], dp[j] + nums[i])\n",
+    "def find(parent, x):\n",
+    "    if parent[x] != x:\n",
+    "        parent[x] = find(parent, parent[x]) #경로 압축\n",
+    "        \n",
+    "    return parent[x]\n",
     "\n",
-    "print(max(dp))\n"
+    "def union(parent, a_root, b_root):\n",
+    "    if a_root < b_root:\n",
+    "        parent[b_root] = a_root\n",
+    "    else:\n",
+    "        parent[a_root] = b_root\n",
+    "        \n",
+    "\n",
+    "for i in range(m):\n",
+    "    case, a, b = cases[i]\n",
+    "    a_root = find(parent, a)\n",
+    "    b_root = find(parent, b)\n",
+    "    \n",
+    "    if case == 0:\n",
+    "        if a_root != b_root:\n",
+    "            union(parent, a_root, b_root)\n",
+    "    elif case == 1:\n",
+    "        if a_root != b_root:\n",
+    "            print(\"NO\")\n",
+    "        else:\n",
+    "            print(\"YES\")"
    ]
   },
   {
