--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -92,52 +92,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "v, e = 3, 3\n",
+    "n, s = map(int, input().split())\n",
+    "nums = list(map(int, input().split()))\n",
     "\n",
-    "edges = [\n",
-    "    [1, 2, 1],\n",
-    "    [2, 3, 2],\n",
-    "    [1, 3, 3]\n",
-    "]\n",
+    "length = float(\"inf\")\n",
+    "\n",
+    "left, right = 0, 0\n",
+    "current_sum = 0\n",
+    "\n",
+    "while right < n:\n",
+    "    current_sum += nums[right]\n",
     "    \n",
-    "def find(parent, x):\n",
-    "    if parent[x] != x:\n",
-    "        parent[x] = find(parent, parent[x]) #경로 압축\n",
+    "    if current_sum >= s:\n",
+    "        length = min(length, right - left + 1)\n",
+    "        current_sum -= nums[left]\n",
+    "        left += 1\n",
     "        \n",
-    "    return parent[x]\n",
-    "\n",
-    "\n",
-    "def union(parent, a_root, b_root):\n",
-    "    if a_root < b_root:\n",
-    "        parent[b_root] = a_root\n",
-    "    else:\n",
-    "        parent[a_root] = b_root\n",
+    "    right += 1\n",
     "    \n",
-    "            \n",
-    "def kruskal(edges, n):\n",
-    "    edges.sort(key = lambda x : x[2])\n",
-    "    parent = [i for i in range(n + 1)]\n",
-    "    \n",
-    "    mst_weight = 0\n",
-    "    # mst_edges = []\n",
-    "    \n",
-    "    for a, b, weight in edges:\n",
-    "        a_root = find(parent, a)\n",
-    "        b_root = find(parent, b)\n",
-    "        if a_root != b_root:\n",
-    "            union(parent, a_root, b_root)\n",
-    "            mst_weight += weight\n",
-    "            # mst_edges.append((a, b, weight))\n",
-    "            \n",
-    "    return mst_weight\n",
-    "\n",
-    "\n",
-    "weight = kruskal(edges, v)\n",
-    "print(weight)"
+    "if length == float('inf'):\n",
+    "    print(0)\n",
+    "else:\n",
+    "    print(length)"
    ]
   },
   {
