--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,32 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 10\n",
-    "nums = [1, 5, 2, 1, 4,3,4,5,2,1]\n",
-    "dp = [0] * n\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(i):\n",
-    "        if nums[i] > nums[j]:\n",
-    "            dp[i] = max(dp[i], dp[j] + 1)\n",
-    "\n",
-    "print(max(dp))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -104,28 +78,24 @@
     }
    ],
    "source": [
-    "n, s = map(int, input().split())\n",
+    "import bisect\n",
+    "\n",
+    "def lis_binary_search(arr):\n",
+    "    lis = []\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        index = bisect.bisect_left(lis, num)\n",
+    "        if index == len(lis):\n",
+    "            lis.append(num)\n",
+    "        else:\n",
+    "            lis[index] = num\n",
+    "            \n",
+    "    return len(lis)\n",
+    "\n",
+    "n = int(input())\n",
     "nums = list(map(int, input().split()))\n",
     "\n",
-    "length = float(\"inf\")\n",
-    "\n",
-    "left, right = 0, 0\n",
-    "current_sum = 0\n",
-    "\n",
-    "while right < n:\n",
-    "    current_sum += nums[right]\n",
-    "    \n",
-    "    if current_sum >= s:\n",
-    "        length = min(length, right - left + 1)\n",
-    "        current_sum -= nums[left]\n",
-    "        left += 1\n",
-    "        \n",
-    "    right += 1\n",
-    "    \n",
-    "if length == float('inf'):\n",
-    "    print(0)\n",
-    "else:\n",
-    "    print(length)"
+    "print(lis_binary_search(nums))"
    ]
   },
   {
@@ -179,6 +149,82 @@
     "            print(\"NO\")\n",
     "        else:\n",
     "            print(\"YES\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m defaultdict, deque\n\u001b[0;32m----> 3\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m tree \u001b[38;5;241m=\u001b[39m defaultdict(\u001b[38;5;28mlist\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "tree = defaultdict(list)\n",
+    "\n",
+    "for _ in range(n-1):\n",
+    "    start, end, weight = map(int, input().split())\n",
+    "    tree[start].append((end, weight))\n",
+    "    tree[end].append((start, weight))\n",
+    "            \n",
+    "def dfs(tree, start):\n",
+    "    _tree = {i:0 for i in range(1, n+1)}\n",
+    "    visited = set()\n",
+    "    have_to_visit = deque()\n",
+    "    \n",
+    "    have_to_visit.append((start, 0))\n",
+    "    visited.add(start)\n",
+    "    \n",
+    "    while have_to_visit:\n",
+    "        node, weight = have_to_visit.popleft()\n",
+    "        _tree[node] = weight\n",
+    "        \n",
+    "        for next_node, next_weight in tree[node]:\n",
+    "            if next_node not in visited:\n",
+    "                have_to_visit.append((next_node, weight + next_weight))\n",
+    "                visited.add(next_node)\n",
+    "\n",
+    "    return _tree\n",
+    "    \n",
+    "    \n",
+    "_tree = dfs(tree, 1)\n",
+    "_node = max(_tree, key=_tree.get)\n",
+    "_tree = dfs(tree, _node)\n",
+    "print(max(_tree.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_tree = {i:0 for i in range(1, n+1) }\n",
+    "max(_tree, key=_tree.get)"
    ]
   },
   {
